# MyRedis

./: CMakeLists.txt  README.md  main.c
src/: adlist.c  adlist.h  asciilogo.c  asciilogo.h  debug.c  dict.c  dict.h  list_test  macros.h  main.c  redis_assert.h  sds.c  sds.h  zmalloc.c  zmalloc.h
